test/test262/src/dstr-binding/error/async-gen-func-named-expr-dflt.template
// Copyright (C) 2017 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
path: language/expressions/async-generator/dstr-named-dflt-
name: async generator named function expression (default parameter)
esid: sec-asyncgenerator-definitions-evaluation
features: [async-iteration]
info: |
    AsyncGeneratorExpression : async [no LineTerminator here] function * BindingIdentifier
        ( FormalParameters ) { AsyncGeneratorBody }
    
        [...]
        7. Let closure be ! AsyncGeneratorFunctionCreate(Normal, FormalParameters,
           AsyncGeneratorBody, funcEnv, strict).
        [...]
---*/

var f;
f = async function* h(/*{ elems }*/ = /*{ vals }*/) {
  /*{ body }*/
};

assert.throws(/*{ error }*/, function() {
  f();
});
